Fix hero, header section, slideshow implementation

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Julijana Transport - Professional transport and logistics solutions across Europe. Reliable, efficient, and sustainable transport services since 1995." />
+    content="LKW CONNECT - Professional transport and logistics solutions across Europe. Reliable, efficient, and sustainable transport services since 1995." />
   <meta name="keywords" content="transport, logistics, Europe, shipping, road transport, international shipping" />
-  <title>Julijana Transport - Professional Transport Solutions</title>
+  <title>LKW CONNECT - Professional Transport Solutions</title>
 </head>
 
 <body>
