--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="LKW CONNECT - Professional transport and logistics solutions across Europe. Reliable, efficient, and sustainable transport services since 1995." />
   <meta name="keywords" content="transport, logistics, Europe, shipping, road transport, international shipping" />
+  <!-- <link rel="icon" type="image/webp" href="/lkw.webp"> -->
+  <!-- <link rel="icon" type="image/webp" href="/Design ohne Titel.jpg"> -->
+  <link rel="icon" type="image/webp" href="/favicon.jpg">
   <title>LKW CONNECT - Professional Transport Solutions</title>
 </head>
 
